# rss-newsletter

./: .gitignore  Cargo.toml  GMAIL.md  README.md  SPEC.md
.github/workflows/: check.yml  release.yml  rust_build_and_release.yml
cli/: blast.rs  demo.rs  flags.rs  serve.rs  subscribe.rs
migrations/: 20240304033359_initialize.sql
shell/: blast.sh  build.sh  buildrelease.sh  down-up.sh  init.sh  run.sh  send.sh  serve.sh  subscribe.sh  test_flags.sh
src/: blast.rs  config.rs  context.rs  db.rs  email_sender.rs  flags.rs  lib.rs  main.rs  model.rs  routes.rs  rss_processor.rs  schema.rs  server.rs  types.rs  utils.rs
