[package]
name = "rssnewsletter"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "demo"
path = "cli/demo.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "serve"
path = "cli/serve.rs"

[[bin]]
name = "subscribe"
path = "cli/subscribe.rs"

[[bin]]
name = "flags"
path = "cli/flags.rs"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1.0", features = ["full"] }
rss = "2.0"
lettre = "0.11.4"
lettre_email = "0.9.4"
clap = { version = "*", features = ['env'] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }